FIx #3717 [Mobile] The "More experiments" button is partially overlapped by the "App Store" Lockbox button fixed. (#3796)

--- a/frontend/src/app/containers/HomePage/index.scss
+++ b/frontend/src/app/containers/HomePage/index.scss
@@ -38,6 +38,7 @@
     position: relative;
     text-align: center;
     transition: background-color 125ms, background-position 125ms, box-shadow 125ms;
+    z-index : 1;
 
     &:hover {
       background-color: $transparent-white-2;
